LIPS-324 [Client Issue] - Buttons are not aligned properly

--- a/src/assets/sass/custom/_devp.scss
+++ b/src/assets/sass/custom/_devp.scss
@@ -822,8 +822,15 @@ span.countBadge {
   .post_links_tags{
     position: absolute;
     bottom: 30px;
-    left: auto;
-    right: auto;
+    left: 0;
+    right: 0;
     width: 100%;
   }
 }
+
+@media screen and (max-width: 768px){
+  .finish_btn {
+    line-height: 30px !important;
+  }
+}
+
